crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_list_empty_marker_indent_four_past_content_col.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..24
  LIST@0..24
    LIST_ITEM@0..24
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      PLAIN@2..24
        TEXT@2..15 "Bullet point."
        NEWLINE@15..16 "\n"
        TEXT@16..23 "      -"
        NEWLINE@23..24 "\n"
