crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_list_item_html_div_same_line_trailing_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..20
  LIST@0..20
    LIST_ITEM@0..20
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      PLAIN@2..20
        INLINE_HTML@2..7
          INLINE_HTML_CONTENT@2..7 "<div>"
        TEXT@7..10 "foo"
        INLINE_HTML@10..16
          INLINE_HTML_CONTENT@10..16 "</div>"
        TEXT@16..19 "bar"
        NEWLINE@19..20 "\n"
