crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_nested_headings_in_containers.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..80
  LIST@0..30
    LIST_ITEM@0..30
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      HEADING@2..18
        ATX_HEADING_MARKER@2..3
          ATX_HEADING_MARKER@2..3 "#"
        WHITESPACE@3..4 " "
        HEADING_CONTENT@4..11
          TEXT@4..11 "Heading"
        WHITESPACE@11..12 " "
        ATTRIBUTE@12..17
          TEXT@12..13 "{"
          ATTR_ID@13..16 "#id"
          TEXT@16..17 "}"
        NEWLINE@17..18 "\n"
      PLAIN@18..30
        TEXT@18..29 "  Some text"
        NEWLINE@29..30 "\n"
  BLANK_LINE@30..31
    BLANK_LINE@30..31 "\n"
  BLOCK_QUOTE@31..50
    BLOCK_QUOTE_MARKER@31..32 ">"
    WHITESPACE@32..33 " "
    HEADING@33..43
      ATX_HEADING_MARKER@33..34
        ATX_HEADING_MARKER@33..34 "#"
      WHITESPACE@34..35 " "
      HEADING_CONTENT@35..42
        TEXT@35..42 "Heading"
      NEWLINE@42..43 "\n"
    BLOCK_QUOTE_MARKER@43..44 ">"
    WHITESPACE@44..45 " "
    PARAGRAPH@45..50
      TEXT@45..49 "Text"
      NEWLINE@49..50 "\n"
  BLANK_LINE@50..51
    BLANK_LINE@50..51 "\n"
  DEFINITION_LIST@51..80
    DEFINITION_ITEM@51..80
      TERM@51..56
        TEXT@51..55 "Term"
        NEWLINE@55..56 "\n"
      DEFINITION@56..80
        DEFINITION_MARKER@56..57 ":"
        WHITESPACE@57..58 " "
        HEADING@58..68
          ATX_HEADING_MARKER@58..59
            ATX_HEADING_MARKER@58..59 "#"
          WHITESPACE@59..60 " "
          HEADING_CONTENT@60..67
            TEXT@60..67 "Heading"
          NEWLINE@67..68 "\n"
        PLAIN@68..80
          TEXT@68..79 "  Some text"
          NEWLINE@79..80 "\n"
