crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_setext_headings.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..706
  HEADING@0..32
    HEADING_CONTENT@0..15
      TEXT@0..15 "Level 1 Heading"
    NEWLINE@15..16 "\n"
    SETEXT_HEADING_UNDERLINE@16..31
      SETEXT_HEADING_UNDERLINE@16..31 "==============="
    NEWLINE@31..32 "\n"
  BLANK_LINE@32..33
    BLANK_LINE@32..33 "\n"
  HEADING@33..65
    HEADING_CONTENT@33..48
      TEXT@33..48 "Level 2 Heading"
    NEWLINE@48..49 "\n"
    SETEXT_HEADING_UNDERLINE@49..64
      SETEXT_HEADING_UNDERLINE@49..64 "---------------"
    NEWLINE@64..65 "\n"
  BLANK_LINE@65..66
    BLANK_LINE@65..66 "\n"
  HEADING@66..114
    HEADING_CONTENT@66..89
      TEXT@66..79 "Heading with "
      EMPHASIS@79..89
        EMPHASIS_MARKER@79..80 "*"
        TEXT@80..88 "emphasis"
        EMPHASIS_MARKER@88..89 "*"
    NEWLINE@89..90 "\n"
    SETEXT_HEADING_UNDERLINE@90..113
      SETEXT_HEADING_UNDERLINE@90..113 "======================="
    NEWLINE@113..114 "\n"
  BLANK_LINE@114..115
    BLANK_LINE@114..115 "\n"
  HEADING@115..164
    HEADING_CONTENT@115..138
      TEXT@115..128 "Heading with "
      STRONG@128..138
        STRONG_MARKER@128..130 "**"
        TEXT@130..136 "strong"
        STRONG_MARKER@136..138 "**"
    NEWLINE@138..139 "\n"
    SETEXT_HEADING_UNDERLINE@139..163
      SETEXT_HEADING_UNDERLINE@139..163 "------------------------"
    NEWLINE@163..164 "\n"
  BLANK_LINE@164..165
    BLANK_LINE@164..165 "\n"
  HEADING@165..205
    HEADING_CONTENT@165..184
      TEXT@165..178 "Heading with "
      INLINE_CODE@178..184
        INLINE_CODE_MARKER@178..179 "`"
        INLINE_CODE_CONTENT@179..183 "code"
        INLINE_CODE_MARKER@183..184 "`"
    NEWLINE@184..185 "\n"
    SETEXT_HEADING_UNDERLINE@185..204
      SETEXT_HEADING_UNDERLINE@185..204 "==================="
    NEWLINE@204..205 "\n"
  BLANK_LINE@205..206
    BLANK_LINE@205..206 "\n"
  HEADING@206..248
    HEADING_CONTENT@206..226
      TEXT@206..226 "Multiple consecutive"
    NEWLINE@226..227 "\n"
    SETEXT_HEADING_UNDERLINE@227..247
      SETEXT_HEADING_UNDERLINE@227..247 "===================="
    NEWLINE@247..248 "\n"
  BLANK_LINE@248..249
    BLANK_LINE@248..249 "\n"
  HEADING@249..281
    HEADING_CONTENT@249..264
      TEXT@249..264 "Setext headings"
    NEWLINE@264..265 "\n"
    SETEXT_HEADING_UNDERLINE@265..280
      SETEXT_HEADING_UNDERLINE@265..280 "==============="
    NEWLINE@280..281 "\n"
  BLANK_LINE@281..282
    BLANK_LINE@281..282 "\n"
  HEADING@282..300
    HEADING_CONTENT@282..290
      TEXT@282..290 "In a row"
    NEWLINE@290..291 "\n"
    SETEXT_HEADING_UNDERLINE@291..299
      SETEXT_HEADING_UNDERLINE@291..299 "--------"
    NEWLINE@299..300 "\n"
  BLANK_LINE@300..301
    BLANK_LINE@300..301 "\n"
  HEADING@301..384
    HEADING_CONTENT@301..341
      TEXT@301..314 "Heading with "
      LINK@314..341
        LINK_START@314..315
          LINK_START@314..315 "["
        LINK_TEXT@315..319
          TEXT@315..319 "link"
        LINK_TEXT_END@319..320 "]"
        LINK_DEST_START@320..321 "("
        LINK_DEST@321..340
          TEXT@321..340 "https://example.com"
        LINK_DEST_END@340..341 ")"
    NEWLINE@341..342 "\n"
    SETEXT_HEADING_UNDERLINE@342..383
      SETEXT_HEADING_UNDERLINE@342..383 "===================== ..."
    NEWLINE@383..384 "\n"
  BLANK_LINE@384..385
    BLANK_LINE@384..385 "\n"
  HEADING@385..460
    HEADING_CONTENT@385..408
      TEXT@385..408 "Heading with attributes"
    WHITESPACE@408..409 " "
    ATTRIBUTE@409..421
      TEXT@409..410 "{"
      ATTR_ID@410..420 "#custom-id"
      TEXT@420..421 "}"
    NEWLINE@421..422 "\n"
    SETEXT_HEADING_UNDERLINE@422..459
      SETEXT_HEADING_UNDERLINE@422..459 "--------------------- ..."
    NEWLINE@459..460 "\n"
  BLANK_LINE@460..461
    BLANK_LINE@460..461 "\n"
  HEADING@461..540
    HEADING_CONTENT@461..499
      TEXT@461..499 "Long underline that's ..."
    NEWLINE@499..500 "\n"
    SETEXT_HEADING_UNDERLINE@500..539
      SETEXT_HEADING_UNDERLINE@500..539 "===================== ..."
    NEWLINE@539..540 "\n"
  BLANK_LINE@540..541
    BLANK_LINE@540..541 "\n"
  HEADING@541..563
    HEADING_CONTENT@541..551
      TEXT@541..551 "Short text"
    NEWLINE@551..552 "\n"
    SETEXT_HEADING_UNDERLINE@552..562
      SETEXT_HEADING_UNDERLINE@552..562 "=========="
    NEWLINE@562..563 "\n"
  BLANK_LINE@563..564
    BLANK_LINE@563..564 "\n"
  HEADING@564..640
    HEADING_CONTENT@564..635
      TEXT@564..635 "The following is in f ..."
    NEWLINE@635..636 "\n"
    SETEXT_HEADING_UNDERLINE@636..639
      SETEXT_HEADING_UNDERLINE@636..639 "---"
    NEWLINE@639..640 "\n"
  HEADING@640..679
    HEADING_CONTENT@640..674
      TEXT@640..674 "subtitle: \"A subtitle ..."
    NEWLINE@674..675 "\n"
    SETEXT_HEADING_UNDERLINE@675..678
      SETEXT_HEADING_UNDERLINE@675..678 "---"
    NEWLINE@678..679 "\n"
  PARAGRAPH@679..706
    TEXT@679..705 "And here is a bit of  ..."
    NEWLINE@705..706 "\n"
